tests/ui/frontmatter/frontmatter-after-tokens.rs
#![feature(frontmatter)]

---
//~^ ERROR: expected item, found `-`
// FIXME(frontmatter): make this diagnostic better
---

fn main() {}
